# telegram_notifier

./: .gitignore  CMakeLists.txt  Makefile  README.md  bot.cpp  bot.h  config.h  curl_handle.cpp  curl_handle.h  global.cpp  global.h  main.cpp  queue.h  telegrambot.service
src/: config.hpp  telegram_notifier.cpp
src/bot/: bot.cpp  bot.hpp
src/config/: config.cpp  config.hpp
src/curl_handle/: curl_handle.cpp  curl_handle.hpp
src/global/: global.cpp  global.hpp
